5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4176/executions/1716_2498.log
== TEST (2019-05-09 16:46:40) 
-- CODE:
ha = int(input('Habitantes da cidade A: '))
hb = int(input('Habitantes da cidade B: '))
ca = float(input('Crescimento de A: '))
cb = float(input('Crescimento de B: '))

while (ha <= hb):
	ha= ha * (ca/100)
	hb= hb * (cb/100)
	
-- OUTPUT:
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:48:22) 
-- CODE:
ha = int(input('Habitantes da cidade A: '))
hb = int(input('Habitantes da cidade B: '))
ca = float(input('Crescimento de A: '))
cb = float(input('Crescimento de B: '))

while (ha <= hb):
	ha= ha * (ca/100)
	hb= hb * (cb/100)
	
	if (ha <= hb):
		print(ha)
		
	else:
		print(ha * hb)
	
-- OUTPUT:
5408117925.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:49:10) 
-- CODE:
ha = int(input('Habitantes da cidade A: '))
hb = int(input('Habitantes da cidade B: '))
ca = float(input('Crescimento de A: '))
cb = float(input('Crescimento de B: '))

while (ha <= hb):
	ha= ha * (ca/100)
	hb= hb * (cb/100)
	
	if (ha <= hb):
		print(ha)
		
	else:
		print(ha/100)
	
-- OUTPUT:
888.0325
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:50:37) 
-- CODE:
ha = int(input('Habitantes da cidade A: '))
hb = int(input('Habitantes da cidade B: '))
ca = float(input('Crescimento de A: '))
cb = float(input('Crescimento de B: '))

anos = 0

while (ha <= hb):
	ha= ha * (ca/100)
	hb= hb * (cb/100)
	anos = anos + 1
	
	if (ha <= hb):
		print(ha)
		
	else:
		print(anos)
	
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:51:40) 
-- CODE:
ha = int(input('Habitantes da cidade A: '))
hb = int(input('Habitantes da cidade B: '))
ca = float(input('Crescimento de A: '))
cb = float(input('Crescimento de B: '))

anos = 0

while (ha <= hb):
	ha= ha * (ca/100)
	hb= hb * (cb/100)
	anos = anos + 1
	
	print(anos)
	

-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:55:13) 
-- CODE:
ha = int(input('Habitantes da cidade A: '))
hb = int(input('Habitantes da cidade B: '))
ca = float(input('Crescimento de A: '))
cb = float(input('Crescimento de B: '))

anos = 1

while (ha >= hb):
	ha= ha * (ca/100)
	hb= hb * (cb/100)
	anos = anos + 1
	
	print()
	

-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 17:02:29) 
-- CODE:
ha = int(input('Habitantes da cidade A: '))
hb = int(input('Habitantes da cidade B: '))
ca = float(input('Crescimento de A: '))
cb = float(input('Crescimento de B: '))

anos = 1

while (ha >= hb):
	ha= ha * (ca/100)
	hb= hb * (cb/100)
	anos = anos + 1
	
	print()
	

-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 17:02:39) 
-- CODE:
ha = int(input('Habitantes da cidade A: '))
hb = int(input('Habitantes da cidade B: '))
ca = float(input('Crescimento de A: '))
cb = float(input('Crescimento de B: '))

anos = 1

while (ha >= hb):
	ha= ha * (ca/100)
	hb= hb * (cb/100)
	anos = anos + 1
	
	print(anos)
	

-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 17:02:59) 
-- CODE:
ha = int(input('Habitantes da cidade A: '))
hb = int(input('Habitantes da cidade B: '))
ca = float(input('Crescimento de A: '))
cb = float(input('Crescimento de B: '))

anos = 1

while (ha >= hb):
	ha= ha * (ca/100)
	hb= hb * (cb/100)
	anos = anos + 1
	
	print(anos)
	

-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 17:03:20) 
-- CODE:
ha = int(input('Habitantes da cidade A: '))
hb = int(input('Habitantes da cidade B: '))
ca = float(input('Crescimento de A: '))
cb = float(input('Crescimento de B: '))

anos = 1

while (ha <= hb):
	ha= ha * (ca/100)
	hb= hb * (cb/100)
	anos = anos + 1
	
	print(anos)
	

-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 17:03:49) 
-- CODE:
ha = int(input('Habitantes da cidade A: '))
hb = int(input('Habitantes da cidade B: '))
ca = float(input('Crescimento de A: '))
cb = float(input('Crescimento de B: '))

anos = 1

while (ha <= hb):
	ha= ha * (ca/100)
	hb= hb * (cb/100)
	anos = anos + 1
	
	print(anos)
	

-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 17:05:07) 
-- CODE:
ha = int(input('Habitantes da cidade A: '))
hb = int(input('Habitantes da cidade B: '))
ca = float(input('Crescimento de A: '))
cb = float(input('Crescimento de B: '))

anos = 1

while (ha <= hb):
	ha= ha * (ca/100)
	hb= hb * (cb/100)
	anos = anos + 1
	
	print(anos)
	

-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 17:06:40) 
-- CODE:
ha = int(input('Habitantes da cidade A: '))
hb = int(input('Habitantes da cidade B: '))
ca = float(input('Crescimento de A: '))
cb = float(input('Crescimento de B: '))

anos = 1

while (ha <= hb):
	ha= ha * (ca/100)
	hb= hb * (cb/100)
	anos = anos + 1
	
	print(anos)
	

-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 17:08:56) 
-- CODE:
ha = int(input('Habitantes da cidade A: '))
hb = int(input('Habitantes da cidade B: '))
ca = float(input('Crescimento de A: '))
cb = float(input('Crescimento de B: '))

anos = 1

while (ha < hb):
	ha= ha * (ca/100)
	hb= hb * (cb/100)
	anos = anos + 1
	
	print(anos)
	

-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 17:09:52) 
-- CODE:
ha = int(input('Habitantes da cidade A: '))
hb = int(input('Habitantes da cidade B: '))
ca = float(input('Crescimento de A: '))
cb = float(input('Crescimento de B: '))

anos = 0

while (ha < hb):
	ha= ha * (ca*100)
	hb= hb * (cb*100)
	anos = anos + 1
	
	print(anos)
	

-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 17:15:53) 
-- CODE:
ha = int(input('Habitantes da cidade A: '))
hb = int(input('Habitantes da cidade B: '))
ca = float(input('Crescimento de A: '))
cb = float(input('Crescimento de B: '))

anos = 0

while (ha < hb):
	ha= ha + (ca*100)
	hb= hb + (cb*100)
	anos = anos + 1
	
	print(anos)
	

-- OUTPUT:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 17:18:11) 
-- CODE:
ha = int(input('Habitantes da cidade A: '))
hb = int(input('Habitantes da cidade B: '))
ca = float(input('Crescimento de A: '))
cb = float(input('Crescimento de B: '))

anos = 0

while (ha < hb):
	ha= ha + (ca*100)
	hb= hb + (cb*100)
	anos = anos + 1
	
	print(anos)
	

-- OUTPUT:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 17:18:28) 
-- CODE:
ha = int(input('Habitantes da cidade A: '))
hb = int(input('Habitantes da cidade B: '))
ca = float(input('Crescimento de A: '))
cb = float(input('Crescimento de B: '))

anos = 0

while (ha < hb):
	ha= ha + (ca*100)
	anos = anos + 1
	
	print(anos)
	

-- OUTPUT:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 17:18:45) 
-- CODE:
ha = int(input('Habitantes da cidade A: '))
hb = int(input('Habitantes da cidade B: '))
ca = float(input('Crescimento de A: '))
cb = float(input('Crescimento de B: '))

anos = 0

while (ha < hb):
	ha= ha + (ca*100)
	anos = anos + 1
	
	print(anos)
	

-- OUTPUT:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 17:21:55) 
-- CODE:
ha = int(input('Habitantes da cidade A: '))
hb = int(input('Habitantes da cidade B: '))
ca = float(input('Crescimento de A: '))
cb = float(input('Crescimento de B: '))

anos = 0

while (ha < hb):
	ha= ha + (ca*100)
	anos = anos + 1
	hb = hb
	print(anos)
	

-- OUTPUT:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 17:22:27) 
-- CODE:
ha = int(input('Habitantes da cidade A: '))
hb = int(input('Habitantes da cidade B: '))
ca = float(input('Crescimento de A: '))
cb = float(input('Crescimento de B: '))

anos = 0

while (ha < hb):
	ha= ha + (ca*100)
	anos = anos + 1
	hb = hb
	print(anos)
	

-- OUTPUT:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 17:28:50) 
-- CODE:
ha = int(input('Habitantes da cidade A: '))
hb = int(input('Habitantes da cidade B: '))
ca = float(input('Crescimento de A: '))
cb = float(input('Crescimento de B: '))

anos = 0

while (ha < hb):
	ha= ha + (ca*100)
	hb= hb + (cb*100)
	anos = anos + 1
	print(anos)
	

-- OUTPUT:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 17:29:07) 
-- CODE:
ha = int(input('Habitantes da cidade A: '))
hb = int(input('Habitantes da cidade B: '))
ca = float(input('Crescimento de A: '))
cb = float(input('Crescimento de B: '))

anos = 0

while (ha < hb):
	ha= ha + (ca*100)
	hb= hb + (cb*100)
	anos = anos + 1
	print(anos)
	

-- OUTPUT:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 17:29:31) 
-- CODE:
ha = int(input('Habitantes da cidade A: '))
hb = int(input('Habitantes da cidade B: '))
ca = float(input('Crescimento de A: '))
cb = float(input('Crescimento de B: '))

anos = 0

while (ha < hb):
	ha= ha + (ca*100)
	hb= hb + (cb*100)
	anos = anos + 1
	print(anos)
	

-- OUTPUT:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 17:30:48) 
-- CODE:
ha = int(input('Habitantes da cidade A: '))
hb = int(input('Habitantes da cidade B: '))
ca = float(input('Crescimento de A: '))
cb = float(input('Crescimento de B: '))

anos = 0

while (ha < hb and ha = hb):
	ha= ha + (ca*100)
	hb= hb + (cb*100)
	anos = anos + 1
	print(anos)
	

-- ERROR:
File "XXXX", line 8
    while (ha < hb and ha = hb):
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 17:31:07) 
-- CODE:
ha = int(input('Habitantes da cidade A: '))
hb = int(input('Habitantes da cidade B: '))
ca = float(input('Crescimento de A: '))
cb = float(input('Crescimento de B: '))

anos = 0

while ((ha < hb) and (ha = hb)):
	ha= ha + (ca*100)
	hb= hb + (cb*100)
	anos = anos + 1
	print(anos)
	

-- ERROR:
File "XXXX", line 8
    while ((ha < hb) and (ha = hb)):
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 17:31:14) 
-- CODE:
ha = int(input('Habitantes da cidade A: '))
hb = int(input('Habitantes da cidade B: '))
ca = float(input('Crescimento de A: '))
cb = float(input('Crescimento de B: '))

anos = 0

while ((ha < hb) and (ha == hb)):
	ha= ha + (ca*100)
	hb= hb + (cb*100)
	anos = anos + 1
	print(anos)
	

-- ERROR:
File "XXXX", line 8
    while ((ha < hb) and (ha = hb)):
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 17:43:54) 
-- CODE:
ha = int(input('Habitantes da cidade A: '))
hb = int(input('Habitantes da cidade B: '))
ca = float(input('Crescimento de A: '))
cb = float(input('Crescimento de B: '))

anos = 0

while (ha < hb):
	ha= ha + ca/100
	hb= hb + cb/100
	anos = anos + 1
	print(anos)
	

-- OUTPUT:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
277
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 17:44:31) 
-- CODE:
ha = int(input('Habitantes da cidade A: '))
hb = int(input('Habitantes da cidade B: '))
ca = float(input('Crescimento de A: '))
cb = float(input('Crescimento de B: '))

anos = 0

while (ha < hb):
	ha= ha + ca/100
	hb= hb + cb/100
	anos = anos + 1
	print(anos)
	

-- OUTPUT:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
277
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 17:44:35) 
-- CODE:
ha = int(input('Habitantes da cidade A: '))
hb = int(input('Habitantes da cidade B: '))
ca = float(input('Crescimento de A: '))
cb = float(input('Crescimento de B: '))

anos = 0

while (ha < hb):
	ha= ha + ca/100
	hb= hb + cb/100
	anos = anos + 1
print(anos)
	

-- OUTPUT:
1319400
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 17:45:17) 
-- CODE:
ha = int(input('Habitantes da cidade A: '))
hb = int(input('Habitantes da cidade B: '))
ca = float(input('Crescimento de A: '))
cb = float(input('Crescimento de B: '))

anos = 0

while (ha < hb):
	ha= ha + ca*100
	hb= hb + cb*100
	anos = anos + 1
print(anos)
	

-- OUTPUT:
132
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 17:45:35) 
-- CODE:
ha = int(input('Habitantes da cidade A: '))
hb = int(input('Habitantes da cidade B: '))
ca = float(input('Crescimento de A: '))
cb = float(input('Crescimento de B: '))

anos = 0

while (ha < hb):
	ha= ha + ca*100
	hb= hb + cb*100
	anos = anos + 1
print(anos)
	

-- EXECUTION TIME:
0.203276
-- TEST CASE 1:
---- input:
250150
580000
35.5
10.5
---- correct output:
5
---- user output:
132
-- TEST CASE 2:
---- input:
180250
1200000
10.25
5.7
---- correct output:
45
---- user output:
2242
-- TEST CASE 3:
---- input:
1000000
1650000
12.75
3.2
---- correct output:
6
---- user output:
681
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 17:45:37) 
-- CODE:
ha = int(input('Habitantes da cidade A: '))
hb = int(input('Habitantes da cidade B: '))
ca = float(input('Crescimento de A: '))
cb = float(input('Crescimento de B: '))

anos = 0

while (ha < hb):
	ha= ha + ca*100
	hb= hb + cb*100
	anos = anos + 1
print(anos)
	

-- OUTPUT:
132
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 17:46:22) 
-- CODE:
ha = int(input('Habitantes da cidade A: '))
hb = int(input('Habitantes da cidade B: '))
ca = float(input('Crescimento de A: '))
cb = float(input('Crescimento de B: '))

anos = 0

while (ha < hb):
	ha= ha + ha*100
	hb= hb + hb*100
	anos = anos + 1
print(anos)
	

-- OUTPUT:
132
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 17:46:47) 
-- CODE:
ha = int(input('Habitantes da cidade A: '))
hb = int(input('Habitantes da cidade B: '))
ca = float(input('Crescimento de A: '))
cb = float(input('Crescimento de B: '))

anos = 0

while (ha < hb):
	ha= ha + ha/100
	hb= hb + hb/100
	anos = anos + 1
print(anos)
	

-- OUTPUT:
70084
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 17:46:49) 
-- CODE:
ha = int(input('Habitantes da cidade A: '))
hb = int(input('Habitantes da cidade B: '))
ca = float(input('Crescimento de A: '))
cb = float(input('Crescimento de B: '))

anos = 0

while (ha < hb):
	ha= ha + ha/100
	hb= hb + hb/100
	anos = anos + 1
print(anos)
	

-- EXECUTION TIME:
0.244793
-- TEST CASE 1:
---- input:
250150
580000
35.5
10.5
---- correct output:
5
---- user output:
70084
-- TEST CASE 2:
---- input:
180250
1200000
10.25
5.7
---- correct output:
45
---- user output:
70117
-- TEST CASE 3:
---- input:
1000000
1650000
12.75
3.2
---- correct output:
6
---- user output:
69945
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 17:46:50) 
-- CODE:
ha = int(input('Habitantes da cidade A: '))
hb = int(input('Habitantes da cidade B: '))
ca = float(input('Crescimento de A: '))
cb = float(input('Crescimento de B: '))

anos = 0

while (ha < hb):
	ha= ha + ha/100
	hb= hb + hb/100
	anos = anos + 1
print(anos)
	

-- OUTPUT:
70084
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 17:48:02) 
-- CODE:
ha = int(input('Habitantes da cidade A: '))
hb = int(input('Habitantes da cidade B: '))
ca = float(input('Crescimento de A: '))
cb = float(input('Crescimento de B: '))

anos = 0

while (ha < hb):
	ha= ha + (ca*ha)/100
	hb= hb + (cb*hb)/100
	anos = anos + 1
print(anos)
	

-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 17:48:21) 
-- CODE:
ha = int(input('Habitantes da cidade A: '))
hb = int(input('Habitantes da cidade B: '))
ca = float(input('Crescimento de A: '))
cb = float(input('Crescimento de B: '))

anos = 0

while (ha < hb):
	ha= ha + (ca*ha)/100
	hb= hb + (cb*hb)/100
	anos = anos + 1
print(anos)
	

-- EXECUTION TIME:
0.168489
-- TEST CASE 1:
---- input:
250150
580000
35.5
10.5
---- correct output:
5
---- user output:
5
-- TEST CASE 2:
---- input:
180250
1200000
10.25
5.7
---- correct output:
45
---- user output:
45
-- TEST CASE 3:
---- input:
1000000
1650000
12.75
3.2
---- correct output:
6
---- user output:
6
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
